--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -6,7 +6,7 @@ hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 #hp.rocketmq.namesrvAddr=127.0.0.1:9876
 hp.rocketmq.namespace=exp_v3-local
 hp.rocketmq.instanceName=w1
-hp.rocketmq.enabled=false
+hp.rocketmq.enabled=true
 
 #eureka
 #eureka.instance.ip-address=127.0.0.1
@@ -19,6 +19,7 @@ spring.cache.type=redis
 spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
+redis.subscriber.enable=true
 
 #xxl-job
 xxl.job.enable=true
