--- a/ex-bb-base/src/main/resources/application-dev.properties
+++ b/ex-bb-base/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@ spring.cache.type=redis
 spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
-redis.subscriber.enable=false
+redis.subscriber.enable=true
 
 #xxl-job
 xxl.job.enable=true
