--- a/ex-bb-kline/src/main/resources/application-bbdev.properties
+++ b/ex-bb-kline/src/main/resources/application-bbdev.properties
@@ -1,6 +1,6 @@
 app.server.port=8056
 
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
@@ -14,7 +14,7 @@ bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 
 kline.bb.trade=bb_match
-kline.bb.repair.trade=bb_repair_trade
+kline.bb.repair.trade=bb_repair_match_trade
 bb.kline.symbols=bb_symbol
 bb.kline.bbGroupIds=1
 
