ex-pc-match-trade 新项目环境

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 
 		<module>ex-bb-kline</module>
         <module>ex-bb-match-trade</module>
+        <module>ex-pc-match-trade</module>
     </modules>
 
     <dependencies>
