--- a/ex-bb-kline/src/main/resources/application-pcdev.properties
+++ b/ex-bb-kline/src/main/resources/application-pcdev.properties
@@ -1,5 +1,5 @@
 app.server.port=8059
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_pc_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
@@ -13,7 +13,7 @@ bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 
 kline.bb.trade=pc_trade
-kline.bb.repair.trade=pc_repair_trade
+kline.bb.repair.trade=pc_repair_match_trade
 bb.kline.symbols=pc_contract
 bb.kline.bbGroupIds=1
 
