--- a/ex-bb-kline/src/main/resources/application-pcprod1.properties
+++ b/ex-bb-kline/src/main/resources/application-pcprod1.properties
@@ -3,7 +3,7 @@ app.server.port=8059
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
 #db
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_pc_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=pcext
 spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
@@ -18,7 +18,7 @@ bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 
 kline.bb.trade=pc_trade
-kline.bb.repair.trade=pc_repair_trade
+kline.bb.repair.trade=pc_repair_match_trade
 bb.kline.symbols=pc_contract
 bb.kline.bbGroupIds=1
 
