--- a/ex-bb-kline/src/main/resources/application-pcdev.properties
+++ b/ex-bb-kline/src/main/resources/application-pcdev.properties
@@ -12,7 +12,7 @@ bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 
-kline.bb.trade=pc_trade
+kline.bb.trade=pc_match
 kline.bb.repair.trade=pc_repair_match_trade
 bb.kline.symbols=pc_contract
 bb.kline.bbGroupIds=1
