--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -19,9 +19,9 @@ spring.cache.type=redis
 spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
-redis.subscriber.enable=true
+redis.subscriber.test=false
 
 #xxl-job
-xxl.job.enable=true
+xxl.job.enable=false
 xxl.job.executor.appname=${spring.application.name}-local
 xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
