--- a/ex-pc-base/src/main/resources/application-dev.properties
+++ b/ex-pc-base/src/main/resources/application-dev.properties
@@ -13,3 +13,6 @@ spring.cache.type=redis
 spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
+
+### xxl-job
+xxl.job.enable=true
