--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -21,6 +21,7 @@ kline.bb.repair.trade=bb_repair_match_trade
 bb.kline.symbols=bb_symbol
 bb.kline.bbGroupIds=1
 
+
 bb.kline.ongoingAppend.enable=0
 bb.kline.ongoingMerge.enable=0
 bb.kline.bbKlineThirdCoverEnable=0
@@ -28,12 +29,14 @@ bb.kline.bbKlineFromExpCalcEnable=0
 bb.kline.bbKlineFromExpCoverEnable=0
 bb.kline.bbRepairTrade.enable=0
 
+#kline \u6301\u4E45\u5316\u6570\u636E\u901A\u77E5
+kline.persistentData.updateEventPattern=kline:bb:persistentData:updateEvent:%{asset}:%{symbol}:%{freq}
 
 # pubsub ongoing trade
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
 
 #bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
-bb.kline.updateEventPattern=bb:kline:updateEvent2:%{asset}:%{symbol}:%{freq}
+bb.kline.updateEventPattern=bb:kline:updateEvent:%{asset}:%{symbol}:%{freq}
 # bb kline data pattern
 #bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
 bb.kline=candle:bb2:%{asset}:%{symbol}:%{freq}
