--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -21,7 +21,7 @@ spring.redis.port=16375
 spring.redis.password=456
 redis.subscriber.test=false
 
-#xxl-job
-xxl.job.enable=false
+#job
+job.type=schedule
 xxl.job.executor.appname=${spring.application.name}-local
 xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
