--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -60,8 +60,9 @@ redis.poolConfig.maxWaitMillis=1000
 redis.poolConfig.testOnBorrow=true
 redis.poolConfig.testOnReturn=true
 
+##job
+job.type=
 ### xxl-job
-xxl.job.enable=false
 xxl.job.admin.addresses=http://127.0.0.1:8780/xxl-job-admin
 xxl.job.executor.appname=${spring.application.name}
 xxl.job.executor.ip=
