--- a/ex-pc-base/src/main/resources/application-local.properties
+++ b/ex-pc-base/src/main/resources/application-local.properties
@@ -18,3 +18,6 @@ spring.datasource.hikari.primary.password=root1234
 meta.redis.host=192.168.0.68
 meta.redis.port=16375
 meta.redis.password=456
+
+##job
+job.type=schedule
