--- a/ex-bb-base/src/main/resources/application-dev.properties
+++ b/ex-bb-base/src/main/resources/application-dev.properties
@@ -17,6 +17,6 @@ spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
 
-#xxl-job
-xxl.job.enable=true
+#job
+job.type=xxl
 xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
