--- a/ex-pc-base/src/main/resources/application-dev.properties
+++ b/ex-pc-base/src/main/resources/application-dev.properties
@@ -14,5 +14,5 @@ spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
 
-### xxl-job
-xxl.job.enable=true
+##job
+job.type=xxl
