--- a/ex-pc-base/src/main/resources/application-prod.properties
+++ b/ex-pc-base/src/main/resources/application-prod.properties
@@ -17,3 +17,5 @@ spring.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 spring.redis.port=6379
 spring.redis.password=
 
+##job
+job.type=schedule
