logback 配置文件修改

--- a/ex-pc-match-trade/src/main/resources/application-pcprod.properties
+++ b/ex-pc-match-trade/src/main/resources/application-pcprod.properties
@@ -1,5 +1,7 @@
 app.server.port=8065
 
+app.log.home=/data/hupa/logs/pc-trade/group1
+
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
 #db
