--- a/ex-bb-match-trade/src/main/resources/application-bbprod3.properties
+++ b/ex-bb-match-trade/src/main/resources/application-bbprod3.properties
@@ -1,5 +1,7 @@
 app.server.port=8064
 
+app.log.home=/data/hupa/logs/bb-trade/group3
+
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
 #db
