kline logback 配置文件修改

--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -4,6 +4,8 @@ app.server.port=8056
 #swagger
 swagger.host=localhost:${app.server.port}
 
+app.log.home=/data/hupa/logs/bbkline/group1
+
 #mq
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
