--- a/ex-bb-kline/src/main/resources/application-bbdev.properties
+++ b/ex-bb-kline/src/main/resources/application-bbdev.properties
@@ -4,6 +4,8 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_b
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
+app.log.home=/data/hupa/logs/bbkline/group1
+
 #swagger
 swagger.host=
 
