--- a/ex-bb-kline/src/main/resources/application-bbdev3.properties
+++ b/ex-bb-kline/src/main/resources/application-bbdev3.properties
@@ -1,5 +1,7 @@
 app.server.port=8058
 
+app.log.home=/data/hupa/logs/bbkline/group3
+
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
