--- a/ex-bb-kline/src/main/resources/application-bbprod1.properties
+++ b/ex-bb-kline/src/main/resources/application-bbprod1.properties
@@ -7,6 +7,7 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northe
 spring.datasource.hikari.primary.username=bbext
 spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
+app.log.home=/data/hupa/logs/bbkline/group1
 
 #swagger
 swagger.host=
