--- a/ex-bb-kline/src/main/resources/application-pcdev.properties
+++ b/ex-bb-kline/src/main/resources/application-pcdev.properties
@@ -1,4 +1,7 @@
 app.server.port=8059
+
+app.log.home=/data/hupa/logs/pckline/group1
+
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_pc_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
