--- a/ex-bb-kline/src/main/resources/application-pcprod1.properties
+++ b/ex-bb-kline/src/main/resources/application-pcprod1.properties
@@ -1,5 +1,7 @@
 app.server.port=8059
 
+app.log.home=/data/hupa/logs/pckline/group1
+
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
 #db
