--- a/ex-bb-match-trade/src/main/resources/application.properties
+++ b/ex-bb-match-trade/src/main/resources/application.properties
@@ -8,7 +8,7 @@ hp.rocketmq.createConsumer=true
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.instanceName=1
-hp.rocketmq.default_consumer.group=ex-bb-match-trade
+hp.rocketmq.default_consumer.group=ex-bb-match-trade-${pc.trade.bbGroupIds}
 hp.rocketmq.default_producer.group=ex-bb-match-trade
 
 #Hikari
