--- a/ex-pc-match-trade/src/main/resources/application-pcprod2.properties
+++ b/ex-pc-match-trade/src/main/resources/application-pcprod2.properties
@@ -6,7 +6,7 @@ app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
 #db
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_pc_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-spring.datasource.hikari.primary.username=bbext
+spring.datasource.hikari.primary.username=pc-match-trade
 spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
 pc.trade.bbGroupIds=2
