--- a/ex-pc-base/src/main/resources/application-local.properties
+++ b/ex-pc-base/src/main/resources/application-local.properties
@@ -7,7 +7,7 @@ hp.rocketmq.instanceName=w1
 #eureka
 #eureka.instance.ip-address=127.0.0.1
 eureka.instance.namespace=w1
-eureka.client.registerWithEureka=true
+eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=true
 
 #db
