配置文件修改

--- a/ex-pc-match-trade/src/main/resources/application-bai.properties
+++ b/ex-pc-match-trade/src/main/resources/application-bai.properties
@@ -4,10 +4,14 @@ app.server.port=8065
 #swagger
 swagger.host=localhost:${app.server.port}
 
+app.log.home=/data/hupa/logs/pc-trade/group1
+
 #mq
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
-
+hp.rocketmq.createConsumer=false
+hp.rocketmq.instanceName=1
+hp.rocketmq.default_consumer.group=ex-pc-match-trade-1
 
 pc.trade.bbGroupIds=1
 pc.trade.symbols=pc_contract
