--- a/ex-pc-match-trade/src/main/resources/application-pcdev.properties
+++ b/ex-pc-match-trade/src/main/resources/application-pcdev.properties
@@ -4,6 +4,8 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_p
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
+app.log.home=/data/hupa/logs/pc-trade/group1
+
 pc.trade.bbGroupIds=1
 pc.trade.symbols=pc_contract
 pc.trade.table=pc_match
@@ -25,6 +27,8 @@ metadata.redis.testWhileIdle=true
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.createConsumer=false
+hp.rocketmq.instanceName=1
+hp.rocketmq.default_consumer.group=ex-pc-match-trade-1
 
 #redis
 spring.cache.type=redis
