--- a/ex-pc-match-trade/src/main/resources/application-pcprod.properties
+++ b/ex-pc-match-trade/src/main/resources/application-pcprod.properties
@@ -28,6 +28,7 @@ metadata.redis.testWhileIdle=true
 
 
 #mq
+hp.rocketmq.default_consumer.group=ex-pc-match-trade-1
 hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
 hp.rocketmq.namespace=exp
 hp.rocketmq.instanceName=1
