配置文件修改

--- a/ex-bb-match-trade/src/main/resources/application-bai.properties
+++ b/ex-bb-match-trade/src/main/resources/application-bai.properties
@@ -4,10 +4,12 @@ app.server.port=8062
 #swagger
 swagger.host=localhost:${app.server.port}
 
+app.log.home=/data/hupa/logs/bb-trade/group1
+
 #mq
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
-
+hp.rocketmq.default_consumer.group=ex-bb-match-trade-1
 
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
