--- a/ex-bb-match-trade/src/main/resources/application-bbdev2.properties
+++ b/ex-bb-match-trade/src/main/resources/application-bbdev2.properties
@@ -4,6 +4,8 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_b
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
+app.log.home=/data/hupa/logs/bb-trade/group2
+
 bb.trade.bbGroupIds=2
 bb.trade.symbols=bb_symbol
 bb.trade.table=bb_match
@@ -25,6 +27,7 @@ metadata.redis.testWhileIdle=true
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.createConsumer=false
+hp.rocketmq.default_consumer.group=ex-bb-match-trade-2
 
 #redis
 spring.cache.type=redis
