--- a/ex-bb-match-trade/src/main/resources/application-bbprod.properties
+++ b/ex-bb-match-trade/src/main/resources/application-bbprod.properties
@@ -31,6 +31,7 @@ metadata.redis.testWhileIdle=true
 hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
 hp.rocketmq.namespace=exp
 hp.rocketmq.instanceName=1
+hp.rocketmq.default_consumer.group=ex-bb-match-trade-1
 
 #redis
 spring.cache.type=redis
