配置文件修改

--- a/ex-pc-match-trade/src/main/resources/application.properties
+++ b/ex-pc-match-trade/src/main/resources/application.properties
@@ -8,6 +8,7 @@ hp.rocketmq.createConsumer=true
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.default_consumer.group=ex-pc-match-trade
+hp.rocketmq.default_producer.group=ex-pc-match-trade
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
