--- a/ex-bb-match-trade/src/main/resources/application-bai.properties
+++ b/ex-bb-match-trade/src/main/resources/application-bai.properties
@@ -6,6 +6,12 @@ swagger.host=localhost:${app.server.port}
 
 app.log.home=/data/hupa/logs/bb-trade/group1
 
+#kline \u6301\u4E45\u5316\u6570\u636E\u901A\u77E5
+kline.persistentData.updateEventPattern=kline:bb:persistentData:updateEvent:%{asset}:%{symbol}:%{freq}
+
+kline.persistent.batchSize=1440
+bb.kline.supportFrequenceString=1,5,15,30,60,360,1440
+
 #mq
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
