--- a/ex-bb-match-trade/src/main/resources/application-bbdev3.properties
+++ b/ex-bb-match-trade/src/main/resources/application-bbdev3.properties
@@ -6,6 +6,12 @@ spring.datasource.hikari.primary.password=root1234
 
 app.log.home=/data/hupa/logs/bb-trade/group3
 
+#kline \u6301\u4E45\u5316\u6570\u636E\u901A\u77E5
+kline.persistentData.updateEventPattern=kline:bb:persistentData:updateEvent:%{asset}:%{symbol}:%{freq}
+
+kline.persistent.batchSize=1440
+bb.kline.supportFrequenceString=1,5,15,30,60,360,1440
+
 bb.trade.bbGroupIds=3
 bb.trade.symbols=bb_symbol
 bb.trade.table=bb_match
