--- a/ex-bb-match-trade/src/main/resources/application-bbprod3.properties
+++ b/ex-bb-match-trade/src/main/resources/application-bbprod3.properties
@@ -9,6 +9,12 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northe
 spring.datasource.hikari.primary.username=bb-match-trade
 spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
+#kline \u6301\u4E45\u5316\u6570\u636E\u901A\u77E5
+kline.persistentData.updateEventPattern=kline:bb:persistentData:updateEvent:%{asset}:%{symbol}:%{freq}
+
+kline.persistent.batchSize=1440
+bb.kline.supportFrequenceString=1,5,15,30,60,360,1440
+
 bb.trade.bbGroupIds=3
 bb.trade.symbols=bb_symbol
 bb.trade.table=bb_match
