--- a/ex_grab_bb_3rdData/pom.xml
+++ b/ex_grab_bb_3rdData/pom.xml
@@ -38,6 +38,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+        
     </dependencies>
 
 </project>
