--- a/ex-bb-base/src/main/resources/application-dev.properties
+++ b/ex-bb-base/src/main/resources/application-dev.properties
@@ -18,5 +18,5 @@ spring.redis.port=16375
 spring.redis.password=456
 
 #job
-job.type=xxl
+job.type=
 xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
