--- a/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
@@ -15,6 +15,9 @@ hp.rocketmq.default_consumer.group=ex-pc-match-trade-1
 
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
+zb.wss.redisKey.prefix=zb:wss:
+zb.wss.url=wss://api.zb.live/websocket
+
 
 metadata.redis.hostName=192.168.0.68
 metadata.redis.password=456
