--- a/ex_grab_bb_3rdData/src/main/resources/application-bbprod.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbprod.properties
@@ -11,6 +11,8 @@ spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
+zb.wss.url=wss://api.zb.live/websocket
+zb.wss.redisKey.prefix=zb:wss:
 
 metadata.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 metadata.redis.password=
