--- a/ex_grab_bb_3rdData/src/main/resources/application-bbdev.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbdev.properties
@@ -8,7 +8,8 @@ app.log.home=/data/hupa/logs/bb/grab_bb_3rdData/group1
 
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
-
+zb.wss.url=wss://api.zb.live/websocket
+zb.wss.redisKey.prefix=zb:wss:
 
 metadata.redis.hostName=192.168.0.68
 metadata.redis.password=456
