--- a/ex_grab_bb_3rdData/src/main/resources/application-bbprod3.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbprod3.properties
@@ -1,4 +1,4 @@
-app.server.port=8068
+app.server.port=8070
 
 app.log.home=/data/hupa/logs/bb/grab_bb_3rdData/group3
 
@@ -12,7 +12,10 @@ spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
 zb.wss.url=wss://api.zb.live/websocket
+zb.https.url=http://api.zb.live/data/v1/ticker?market=
 zb.wss.redisKey.prefix=zb:wss:
+zb.https.redisKey.prefix=zb:https:
+
 
 metadata.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 metadata.redis.password=
