--- a/ex_grab_bb_3rdData/src/main/resources/application-bbdev2.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbdev2.properties
@@ -1,4 +1,4 @@
-app.server.port=8068
+app.server.port=8069
 
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_pc_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
@@ -9,7 +9,11 @@ app.log.home=/data/hupa/logs/bb/grab_bb_3rdData/group2
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
 zb.wss.url=wss://api.zb.live/websocket
+zb.https.url=http://api.zb.live/data/v1/ticker?market=
 zb.wss.redisKey.prefix=zb:wss:
+zb.https.redisKey.prefix=zb:https:
+
+
 
 metadata.redis.hostName=192.168.0.68
 metadata.redis.password=456
