修改spring.application.name

--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -1,4 +1,6 @@
 app.server.port=8056
+spring.application.name=ex-bb-kline
+
 #
 #app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.84:8761/eureka/
 #swagger
