--- a/ex-bb-kline/src/main/resources/application-bbprod1.properties
+++ b/ex-bb-kline/src/main/resources/application-bbprod1.properties
@@ -1,4 +1,5 @@
 app.server.port=8056
+spring.application.name=ex-bb-kline
 
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
