--- a/ex-bb-kline/src/main/resources/application-bbdev2.properties
+++ b/ex-bb-kline/src/main/resources/application-bbdev2.properties
@@ -1,4 +1,5 @@
 app.server.port=8057
+spring.application.name=ex-bb-kline
 
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
