--- a/ex_grab_bb_3rdData/src/main/resources/application.yml
+++ b/ex_grab_bb_3rdData/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   application:
-    name: ex-bb-kline
+    name: ex_grab_bb_3rdData
   messages:
     fallbackToSystemLocale: false
     basename: i18n/errors, i18n/messages
