--- a/ex_grab_bb_3rdData/src/main/resources/application-bbdev.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbdev.properties
@@ -1,4 +1,5 @@
 app.server.port=8068
+spring.application.name=ex_grab_bb_3rdData
 
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_pc_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
@@ -32,7 +33,7 @@ hp.rocketmq.namespace=exp_v3
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.createConsumer=false
 hp.rocketmq.instanceName=1
-hp.rocketmq.default_consumer.group=ex-pc-match-trade-1
+hp.rocketmq.default_consumer.group=ex_grab_bb_3rdData-1
 
 #redis
 spring.cache.type=redis
