--- a/ex_grab_bb_3rdData/src/main/resources/application-bbprod.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbprod.properties
@@ -1,4 +1,5 @@
 app.server.port=8068
+spring.application.name=ex_grab_bb_3rdData
 
 app.log.home=/data/hupa/logs/bb/grab_bb_3rdData/group1
 
@@ -32,7 +33,7 @@ metadata.redis.testWhileIdle=true
 
 
 #mq
-hp.rocketmq.default_consumer.group=ex-pc-match-trade-1
+hp.rocketmq.default_consumer.group=ex_grab_bb_3rdData-1
 hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
 hp.rocketmq.namespace=exp
 hp.rocketmq.instanceName=1
