--- a/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
@@ -1,4 +1,5 @@
 app.server.port=8068
+spring.application.name=ex_grab_bb_3rdData
 #
 #app.registry.eureka.url=http://eureka:HpyMV63TDu2y@192.168.0.84:8761/eureka/
 #swagger
@@ -11,7 +12,7 @@ hp.rocketmq.namespace=exp_v3
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.createConsumer=false
 hp.rocketmq.instanceName=1
-hp.rocketmq.default_consumer.group=ex-pc-match-trade-1
+hp.rocketmq.default_consumer.group=ex_grab_bb_3rdData-1
 
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
