--- a/ex_grab_bb_3rdData/src/main/resources/application-bbdev3.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbdev3.properties
@@ -1,4 +1,5 @@
 app.server.port=8070
+spring.application.name=ex_grab_bb_3rdData
 
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_pc_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
@@ -6,7 +7,7 @@ spring.datasource.hikari.primary.password=root1234
 
 app.log.home=/data/hupa/logs/bb/grab_bb_3rdData/group3
 
-bb.trade.bbGroupIds=1
+bb.trade.bbGroupIds=3
 bb.trade.symbols=bb_symbol
 zb.wss.url=wss://api.zb.live/websocket
 zb.https.url=http://api.zb.live/data/v1/ticker?market=
@@ -32,7 +33,7 @@ hp.rocketmq.namespace=exp_v3
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.createConsumer=false
 hp.rocketmq.instanceName=1
-hp.rocketmq.default_consumer.group=ex-pc-match-trade-3
+hp.rocketmq.default_consumer.group=ex_grab_bb_3rdData-3
 
 #redis
 spring.cache.type=redis
