--- a/ex_grab_bb_3rdData/src/main/resources/application-bbprod2.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbprod2.properties
@@ -1,4 +1,5 @@
 app.server.port=8069
+spring.application.name=ex_grab_bb_3rdData
 
 app.log.home=/data/hupa/logs/bb/grab_bb_3rdData/group2
 
@@ -9,7 +10,7 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northe
 spring.datasource.hikari.primary.username=pc-match-trade
 spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
-bb.trade.bbGroupIds=1
+bb.trade.bbGroupIds=2
 bb.trade.symbols=bb_symbol
 zb.wss.url=wss://api.zb.live/websocket
 zb.https.url=http://api.zb.live/data/v1/ticker?market=
@@ -32,7 +33,7 @@ metadata.redis.testWhileIdle=true
 
 
 #mq
-hp.rocketmq.default_consumer.group=ex-pc-match-trade-2
+hp.rocketmq.default_consumer.group=ex_grab_bb_3rdData-2
 hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
 hp.rocketmq.namespace=exp
 hp.rocketmq.instanceName=1
