爬取ok交易所最新成交价

--- a/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
@@ -14,12 +14,19 @@ hp.rocketmq.createConsumer=false
 hp.rocketmq.instanceName=1
 hp.rocketmq.default_consumer.group=ex_grab_bb_3rdData-1
 
+#zb
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
+
 zb.wss.url=wss://api.zb.live/websocket
 zb.https.url=http://api.zb.live/data/v1/ticker?market=
-zb.wss.redisKey.prefix=zb:wss:
-zb.https.redisKey.prefix=zb:https:
+zb.wss.redisKey.prefix=ticker:bb:wss:zb:
+zb.https.redisKey.prefix=ticker:bb:https:zb:
+
+#ok
+ok.https.url=https://www.okex.com/api/spot/v3/instruments/ticker
+#ok.wss.redisKey.prefix=ticker:bb:wss:ok:
+ok.https.redisKey.prefix=ticker:bb:https:ok:
 
 metadata.redis.hostName=192.168.0.68
 metadata.redis.password=456
