--- a/ex_grab_bb_3rdData/src/main/resources/application-bbprod2.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbprod2.properties
@@ -12,11 +12,17 @@ spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
 bb.trade.bbGroupIds=2
 bb.trade.symbols=bb_symbol
+
+#zb
 zb.wss.url=wss://api.zb.live/websocket
 zb.https.url=http://api.zb.live/data/v1/ticker?market=
-zb.wss.redisKey.prefix=zb:wss:
-zb.https.redisKey.prefix=zb:https:
+zb.wss.redisKey.prefix=ticker:bb:wss:zb:
+zb.https.redisKey.prefix=ticker:bb:https:zb:
 
+#ok
+ok.https.url=https://www.okex.com/api/spot/v3/instruments/ticker
+#ok.wss.redisKey.prefix=ticker:bb:wss:ok:
+ok.https.redisKey.prefix=ticker:bb:https:ok:
 
 metadata.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 metadata.redis.password=
