--- a/ex_grab_bb_3rdData/src/main/resources/application-bbdev2.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbdev2.properties
@@ -9,11 +9,17 @@ app.log.home=/data/hupa/logs/bb/grab_bb_3rdData/group2
 
 bb.trade.bbGroupIds=2
 bb.trade.symbols=bb_symbol
+
+#zb
 zb.wss.url=wss://api.zb.live/websocket
 zb.https.url=http://api.zb.live/data/v1/ticker?market=
-zb.wss.redisKey.prefix=zb:wss:
-zb.https.redisKey.prefix=zb:https:
+zb.wss.redisKey.prefix=ticker:bb:wss:zb:
+zb.https.redisKey.prefix=ticker:bb:https:zb:
 
+#ok
+ok.https.url=https://www.okex.com/api/spot/v3/instruments/ticker
+#ok.wss.redisKey.prefix=ticker:bb:wss:ok:
+ok.https.redisKey.prefix=ticker:bb:https:ok:
 
 
 metadata.redis.hostName=192.168.0.68
