--- a/ex_grab_bb_3rdData/src/main/resources/application-bbprod3.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbprod3.properties
@@ -23,6 +23,10 @@ ok.https.url=https://www.okex.com/api/spot/v3/instruments/ticker
 #ok.wss.redisKey.prefix=ticker:bb:wss:ok:
 ok.https.redisKey.prefix=ticker:bb:https:ok:
 
+#bitfinex\u4EA4\u6613\u6240
+bitfinex.https.url=https://api-pub.bitfinex.com/v2/tickers?symbols=ALL
+bitfinex.https.redisKey.prefix=ticker:bb:https:bitfinex:
+
 metadata.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 metadata.redis.password=
 metadata.redis.port=6379
