爬取bitfinex交易所数据

--- a/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
@@ -14,24 +14,29 @@ hp.rocketmq.createConsumer=false
 hp.rocketmq.instanceName=1
 hp.rocketmq.default_consumer.group=ex_grab_bb_3rdData-1
 
-#zb
+
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
 
+#zb
 zb.wss.url=wss://api.zb.live/websocket
 zb.https.url=http://api.zb.live/data/v1/ticker?market=
 zb.wss.redisKey.prefix=ticker:bb:wss:zb:
 zb.https.redisKey.prefix=ticker:bb:https:zb:
+grab.bb.3rdDataByZbWss.enable=1
+grab.bb.3rdDataByZbHttps.enable=1
 
 #ok
 ok.https.url=https://www.okex.com/api/spot/v3/instruments/ticker
 #ok.wss.redisKey.prefix=ticker:bb:wss:ok:
 ok.https.redisKey.prefix=ticker:bb:https:ok:
+grab.bb.3rdDataByOkHttps.enable=1
+
 
 #bitfinex\u4EA4\u6613\u6240
 bitfinex.https.url=https://api-pub.bitfinex.com/v2/tickers?symbols=ALL
 bitfinex.https.redisKey.prefix=ticker:bb:https:bitfinex:
-
+grab.bb.3rdDataByBitfinexHttps.enable=1
 
 
 metadata.redis.hostName=192.168.0.68
