--- a/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
@@ -38,6 +38,14 @@ bitfinex.https.url=https://api-pub.bitfinex.com/v2/tickers?symbols=ALL
 bitfinex.https.redisKey.prefix=ticker:bb:https:bitfinex:
 grab.bb.3rdDataByBitfinexHttps.enable=1
 
+#binance\u4EA4\u6613\u6240
+binance.wss.url=wss://stream.yshyqxx.com/stream?streams=!miniTicker@arr
+binance.https.url=https://testnet.binancefuture.com/fapi/v1/ticker/price
+binance.wss.redisKey.prefix=ticker:bb:wss:binance:
+binance.https.redisKey.prefix=ticker:bb:https:binance:
+grab.bb.3rdDataByBinanceWss.enable=1
+grab.bb.3rdDataByBinanceHttps.enable=1
+
 
 metadata.redis.hostName=192.168.0.68
 metadata.redis.password=456
