配置文件修改

--- a/ex_grab_bb_3rdData/src/main/resources/application-bbdev3.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbdev3.properties
@@ -10,31 +10,38 @@ app.log.home=/data/hupa/logs/bb/grab_bb_3rdData/group3
 bb.trade.bbGroupIds=3
 bb.trade.symbols=bb_symbol
 
+ws.redisKey.prefix=ticker:bb:wss
+https.redisKey.prefix=ticker:bb:https
+
 #zb
+zb.name.prefix=zb:
 zb.wss.url=wss://api.zb.live/websocket
 zb.https.url=http://api.zb.live/data/v1/ticker?market=
-zb.wss.redisKey.prefix=ticker:bb:wss:zb:
-zb.https.redisKey.prefix=ticker:bb:https:zb:
+zb.wss.redisKey.prefix=${ws.redisKey.prefix}:${zb.name.prefix}
+zb.https.redisKey.prefix=${https.redisKey.prefix}:${zb.name.prefix}
 grab.bb.3rdDataByZbWss.enable=1
 grab.bb.3rdDataByZbHttps.enable=1
 
 #ok
+ok.name.prefix=ok:
 ok.https.url=https://www.okex.com/api/spot/v3/instruments/ticker
 #ok.wss.redisKey.prefix=ticker:bb:wss:ok:
-ok.https.redisKey.prefix=ticker:bb:https:ok:
+ok.https.redisKey.prefix=${https.redisKey.prefix}:${ok.name.prefix}
 grab.bb.3rdDataByOkHttps.enable=1
 
 
 #bitfinex\u4EA4\u6613\u6240
+bitfinex.name.prefix=bitfinex:
 bitfinex.https.url=https://api-pub.bitfinex.com/v2/tickers?symbols=ALL
-bitfinex.https.redisKey.prefix=ticker:bb:https:bitfinex:
+bitfinex.https.redisKey.prefix=${https.redisKey.prefix}:${bitfinex.name.prefix}
 grab.bb.3rdDataByBitfinexHttps.enable=1
 
 #binance\u4EA4\u6613\u6240
+binance.name.prefix=binance:
 binance.wss.url=wss://stream.yshyqxx.com/stream?streams=!miniTicker@arr
 binance.https.url=https://testnet.binancefuture.com/fapi/v1/ticker/price
-binance.wss.redisKey.prefix=ticker:bb:wss:binance:
-binance.https.redisKey.prefix=ticker:bb:https:binance:
+binance.wss.redisKey.prefix=${ws.redisKey.prefix}:${binance.name.prefix}
+binance.https.redisKey.prefix=${https.redisKey.prefix}:${binance.name.prefix}
 grab.bb.3rdDataByBinanceWss.enable=1
 grab.bb.3rdDataByBinanceHttps.enable=1
 
