--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>ex-bb-match-trade</module>
         <module>ex-pc-match-trade</module>
         <module>ex_grab_bb_3rdData</module>
+        <module>ex_grab_pc_3rdData</module>
     </modules>
 
     <dependencies>
