--- a/ex_grab_pc_3rdData/src/main/resources/application-pcprod3.properties
+++ b/ex_grab_pc_3rdData/src/main/resources/application-pcprod3.properties
@@ -10,44 +10,43 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northe
 spring.datasource.hikari.primary.username=pc-match-trade
 spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
-bb.trade.bbGroupIds=3
-bb.trade.symbols=bb_symbol
+pc.bbGroupIds=3
+pc.symbols=pc_contract
 
-ws.redisKey.prefix=ticker:bb:wss
-https.redisKey.prefix=ticker:bb:https
+ws.redisKey.prefix=ticker:pc:wss
+https.redisKey.prefix=ticker:pc:https
 
 #zb
 zb.name.prefix=zb:
-zb.wss.url=wss://api.zb.live/websocket
-zb.https.url=http://api.zb.live/data/v1/ticker?market=
+zb.wss.url=
+zb.https.url=
 zb.wss.redisKey.prefix=${ws.redisKey.prefix}:${zb.name.prefix}
 zb.https.redisKey.prefix=${https.redisKey.prefix}:${zb.name.prefix}
-grab.bb.3rdDataByZbWss.enable=1
-grab.bb.3rdDataByZbHttps.enable=1
+grab.pc.3rdDataByZbWss.enable=0
+grab.pc.3rdDataByZbHttps.enable=0
 
 #ok
 ok.name.prefix=ok:
-ok.https.url=https://www.okex.com/api/spot/v3/instruments/ticker
+ok.https.url=https://www.okex.com/api/swap/v3/instruments/ticker
 #ok.wss.redisKey.prefix=ticker:bb:wss:ok:
 ok.https.redisKey.prefix=${https.redisKey.prefix}:${ok.name.prefix}
-grab.bb.3rdDataByOkHttps.enable=1
+grab.pc.3rdDataByOkHttps.enable=1
 
 
 #bitfinex\u4EA4\u6613\u6240
 bitfinex.name.prefix=bitfinex:
-bitfinex.https.url=https://api-pub.bitfinex.com/v2/tickers?symbols=ALL
+bitfinex.https.url=
 bitfinex.https.redisKey.prefix=${https.redisKey.prefix}:${bitfinex.name.prefix}
-grab.bb.3rdDataByBitfinexHttps.enable=1
+grab.pc.3rdDataByBitfinexHttps.enable=0
 
 #binance\u4EA4\u6613\u6240
 binance.name.prefix=binance:
-binance.wss.url=wss://stream.yshyqxx.com/stream?streams=!miniTicker@arr
-binance.https.url=https://testnet.binancefuture.com/fapi/v1/ticker/price
+binance.wss.url=wss://stream.yshyqxx.com/stream?streams=
+binance.https.url=
 binance.wss.redisKey.prefix=${ws.redisKey.prefix}:${binance.name.prefix}
 binance.https.redisKey.prefix=${https.redisKey.prefix}:${binance.name.prefix}
-grab.bb.3rdDataByBinanceWss.enable=1
-grab.bb.3rdDataByBinanceHttps.enable=1
-
+grab.pc.3rdDataByBinanceWss.enable=1
+grab.pc.3rdDataByBinanceHttps.enable=0
 
 metadata.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 metadata.redis.password=
