--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -36,6 +36,9 @@ spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 id.generator.dataCenterId=0
 id.generator.serverId=${app.server.id}
 
+#lock
+redisson.lock.module=bb:
+
 #redis
 spring.cache.type=redis
 spring.redis.host=localhost
