删除旧线程代码

--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -5,7 +5,7 @@ swagger.host=
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 #hp.rocketmq.namesrvAddr=127.0.0.1:9876
 hp.rocketmq.namespace=exp_v3-local
-hp.rocketmq.instanceName=w1
+hp.rocketmq.instanceName=local-${app.server.id}
 hp.rocketmq.enabled=true
 
 #eureka
