--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -10,7 +10,7 @@ hp.rocketmq.enabled=true
 hp.rocketmq.createConsumer=false
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.namespace=exp_v3
-hp.rocketmq.instanceName=1
+hp.rocketmq.instanceName=${app.server.id}
 hp.rocketmq.default_consumer.group=ex-bb-base
 hp.rocketmq.default_producer.group=ex-bb-base
 mq.orderly.consumer.enable=true
