--- a/ex_grab_bb_3rdData/src/main/resources/application-bbprod3.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bbprod3.properties
@@ -19,7 +19,7 @@ https.redisKey.prefix=ticker:bb:https
 #zb
 zb.name.prefix=zb:
 zb.wss.url=wss://api.zb.live/websocket
-zb.https.url=http://api.zb.live/data/v1/ticker?market=
+zb.https.url=http://api.zb.live/data/v1/allTicker
 zb.wss.redisKey.prefix=${ws.redisKey.prefix}:${zb.name.prefix}
 zb.https.redisKey.prefix=${https.redisKey.prefix}:${zb.name.prefix}
 grab.bb.3rdDataByZbWss.enable=1
