修改分布式锁和数据库锁

--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -37,6 +37,7 @@ id.generator.dataCenterId=0
 id.generator.serverId=${app.server.id}
 
 #lock
+redisson.distributed.lock=false
 redisson.lock.module=bb:
 
 #redis
