--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -36,6 +36,7 @@ id.generator.dataCenterId=0
 id.generator.serverId=${app.server.id}
 
 #lock
+redisson.distributed.lock=true
 redisson.lock.module=pc:
 
 #redis
