--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -37,7 +37,7 @@ id.generator.dataCenterId=0
 id.generator.serverId=${app.server.id}
 
 #lock
-redisson.distributed.lock=false
+redisson.distributed.lock=true
 redisson.lock.module=bb:
 
 #redis
