--- a/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
@@ -68,6 +68,19 @@ metadata.redis.testOnReturn=true
 metadata.redis.testWhileIdle=true
 
 
+originaldata.redis.hostName=127.0.0.1
+originaldata.redis.password=
+originaldata.redis.port=6379
+originaldata.redis.database=0
+originaldata.redis.timeout=6000
+originaldata.redis.minIdle=5
+originaldata.redis.maxIdle=10
+originaldata.redis.maxTotal=100
+originaldata.redis.maxWaitMillis=2000
+originaldata.redis.testOnBorrow=true
+originaldata.redis.testOnReturn=true
+originaldata.redis.testWhileIdle=true
+
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_pc_match_trade?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
@@ -84,21 +97,6 @@ spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
 
-# Redis \u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A 0\uFF09
-spring.redis.database=5
-# Redis \u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
-# Redis \u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
-#spring.redis.password=456
-#\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
-spring.redis.jedis.pool.max-active=8
-# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
-spring.redis.jedis.pool.max-wait=-1
-# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
-spring.redis.jedis.pool.max-idle=8
-# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
-spring.redis.jedis.pool.min-idle=0
-# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
-spring.redis.timeout=5000
 
 
 
