--- a/ex_grab_pc_3rdData/src/main/resources/application-bai.properties
+++ b/ex_grab_pc_3rdData/src/main/resources/application-bai.properties
@@ -67,6 +67,18 @@ metadata.redis.testOnBorrow=true
 metadata.redis.testOnReturn=true
 metadata.redis.testWhileIdle=true
 
+originaldata.redis.hostName=127.0.0.1
+originaldata.redis.password=
+originaldata.redis.port=6379
+originaldata.redis.database=0
+originaldata.redis.timeout=6000
+originaldata.redis.minIdle=5
+originaldata.redis.maxIdle=10
+originaldata.redis.maxTotal=100
+originaldata.redis.maxWaitMillis=2000
+originaldata.redis.testOnBorrow=true
+originaldata.redis.testOnReturn=true
+originaldata.redis.testWhileIdle=true
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
