--- a/ex_grab_pc_3rdData/src/main/resources/application-pcprod.properties
+++ b/ex_grab_pc_3rdData/src/main/resources/application-pcprod.properties
@@ -62,6 +62,18 @@ metadata.redis.testOnBorrow=true
 metadata.redis.testOnReturn=true
 metadata.redis.testWhileIdle=true
 
+originaldata.redis.hostName=172.31.30.246
+originaldata.redis.password=ZCJkKkXxIXIri8
+originaldata.redis.port=6379
+originaldata.redis.database=0
+originaldata.redis.timeout=6000
+originaldata.redis.minIdle=5
+originaldata.redis.maxIdle=10
+originaldata.redis.maxTotal=100
+originaldata.redis.maxWaitMillis=2000
+originaldata.redis.testOnBorrow=true
+originaldata.redis.testOnReturn=true
+originaldata.redis.testWhileIdle=true
 
 #mq
 hp.rocketmq.default_consumer.group=ex_grab_pc_3rdData-1
