--- a/ex_grab_pc_3rdData/src/main/resources/application-pcdev.properties
+++ b/ex_grab_pc_3rdData/src/main/resources/application-pcdev.properties
@@ -59,6 +59,19 @@ metadata.redis.testOnBorrow=true
 metadata.redis.testOnReturn=true
 metadata.redis.testWhileIdle=true
 
+originaldata.redis.hostName=47.74.22.34
+originaldata.redis.password=ZCJkKkXxIXIri8
+originaldata.redis.port=16379
+originaldata.redis.database=0
+originaldata.redis.timeout=6000
+originaldata.redis.minIdle=5
+originaldata.redis.maxIdle=10
+originaldata.redis.maxTotal=100
+originaldata.redis.maxWaitMillis=2000
+originaldata.redis.testOnBorrow=true
+originaldata.redis.testOnReturn=true
+originaldata.redis.testWhileIdle=true
+
 #mq
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
