--- a/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
+++ b/ex_grab_bb_3rdData/src/main/resources/application-bai.properties
@@ -29,6 +29,8 @@ zb.wss.redisKey.prefix=${ws.redisKey.prefix}:${zb.name.prefix}
 zb.https.redisKey.prefix=${https.redisKey.prefix}:${zb.name.prefix}
 grab.bb.3rdDataByZbWss.enable=1
 grab.bb.3rdDataByZbHttps.enable=1
+zb.bbZb2ExpSymbolMapping=bchabc:bch,a:b
+
 
 #ok
 ok.name.prefix=ok:
