--- a/ex-pc-base/src/main/resources/application-local.properties
+++ b/ex-pc-base/src/main/resources/application-local.properties
@@ -15,9 +15,9 @@ spring.datasource.hikari.primary.username=expv3
 spring.datasource.hikari.primary.password=root1234
 
 #redis
-meta.redis.host=192.168.0.68
-meta.redis.port=16375
-meta.redis.password=456
+exp.redis.host=192.168.0.68
+exp.redis.port=16375
+exp.redis.password=456
 
 ##job
 job.type=schedule
