--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -15,11 +15,9 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 
 #redis
-spring.cache.type=redis
-spring.redis.host=192.168.0.68
-spring.redis.port=16375
-spring.redis.password=456
-redis.subscriber.test=false
+exp.redis.host=192.168.0.68
+exp.redis.port=16375
+exp.redis.password=456
 
 #job
 job.type=schedule
