--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -36,15 +36,23 @@ spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 id.generator.dataCenterId=0
 id.generator.serverId=${app.server.id}
 
-#lock
-redisson.distributed.lock=true
-redisson.lock.module=bb:
+#### redis ####
 
-#redis
+##exp
+exp.redis.host=localhost
+exp.redis.port=6379
+exp.redis.password=
+
+##base
+base.redis.host=${exp.redis.host}
+base.redis.port=${exp.redis.port}
+base.redis.password=${exp.redis.password}
+
+##springCache
 spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=
+spring.redis.host=${base.redis.host}
+spring.redis.port=${base.redis.port}
+spring.redis.password=${base.redis.password}
 spring.redis.pool.max-active=1000
 spring.redis.pool.max-wait=5000
 spring.redis.pool.max-idle=256
@@ -53,16 +61,27 @@ spring.redis.timeout=2000ms
 spring.redis.database=1
 spring.redis.keyPrefix=
 
-meta.redis.host=${spring.redis.host}
-meta.redis.port=${spring.redis.port}
-meta.redis.password=${spring.redis.password}
+#expCachePool
+exp.redis.servers=${exp.redis.host}:${exp.redis.port}:${exp.redis.password}
+exp.redis.poolConfig.maxTotal=1024
+exp.redis.poolConfig.maxIdle=256
+exp.redis.poolConfig.maxWaitMillis=1000
+exp.redis.poolConfig.testOnBorrow=true
+exp.redis.poolConfig.testOnReturn=true
 
-redis.servers=${spring.redis.host}:${spring.redis.port}:${spring.redis.password}
-redis.poolConfig.maxTotal=1024
-redis.poolConfig.maxIdle=256
-redis.poolConfig.maxWaitMillis=1000
-redis.poolConfig.testOnBorrow=true
-redis.poolConfig.testOnReturn=true
+#baseCachePool
+base.redis.servers=${base.redis.host}:${base.redis.port}:${base.redis.password}
+base.redis.poolConfig.maxTotal=1024
+base.redis.poolConfig.maxIdle=256
+base.redis.poolConfig.maxWaitMillis=1000
+base.redis.poolConfig.testOnBorrow=true
+base.redis.poolConfig.testOnReturn=true
+
+#lock
+redisson.distributed.lock=true
+redisson.lock.module=bb:
+
+#### redis ####
 
 ##job
 job.type=
