--- a/ex-bb-base/src/main/resources/application-dev.properties
+++ b/ex-bb-base/src/main/resources/application-dev.properties
@@ -12,11 +12,16 @@ swagger.host=
 hp.rocketmq.namespace=exp_v3
 
 #redis
-spring.cache.type=redis
-spring.redis.host=192.168.0.68
-spring.redis.port=16375
-spring.redis.password=456
+exp.redis.host=192.168.0.68
+exp.redis.port=16375
+exp.redis.password=456
+
+base.redis.host=192.168.0.68
+base.redis.port=16375
+base.redis.password=456
 
 #job
 job.type=
 xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
+
+redis.subscriber.test=true
