--- a/ex_grab_pc_3rdData/src/main/resources/application-pcdev.properties
+++ b/ex_grab_pc_3rdData/src/main/resources/application-pcdev.properties
@@ -32,18 +32,18 @@ grab.pc.3rdDataByOkHttps.enable=1
 
 #bitfinex\u4EA4\u6613\u6240
 bitfinex.name.prefix=bitfinex:
-bitfinex.https.url=
+bitfinex.https.url=https://api-pub.bitfinex.com/v2/trades/t
 bitfinex.https.redisKey.prefix=${https.redisKey.prefix}:${bitfinex.name.prefix}
-grab.pc.3rdDataByBitfinexHttps.enable=0
+grab.pc.3rdDataByBitfinexHttps.enable=1
 
 #binance\u4EA4\u6613\u6240
 binance.name.prefix=binance:
 binance.wss.url=wss://stream.yshyqxx.com/stream?streams=
-binance.https.url=
+binance.https.url=https://api.binance.com/api/v1/trades?symbol=
 binance.wss.redisKey.prefix=${ws.redisKey.prefix}:${binance.name.prefix}
 binance.https.redisKey.prefix=${https.redisKey.prefix}:${binance.name.prefix}
 grab.pc.3rdDataByBinanceWss.enable=1
-grab.pc.3rdDataByBinanceHttps.enable=0
+grab.pc.3rdDataByBinanceHttps.enable=1
 
 
 metadata.redis.hostName=192.168.0.68
