--- a/ex-bb-base/src/main/resources/application-prod.properties
+++ b/ex-bb-base/src/main/resources/application-prod.properties
@@ -16,9 +16,9 @@ exp.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 exp.redis.port=6379
 exp.redis.password=
 
-base.redis.host=172.31.30.246
-base.redis.port=6378
-base.redis.password=ZCJkKkXxXI8
+base.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
+base.redis.port=6379
+base.redis.password=
 ##job
 job.type=schedule
 
