修改锁配置

--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -37,10 +37,6 @@ bys.server.host=http://192.168.0.13:7080/api/v1
 bys.client.merchantId=1
 bys.client.secret=6SKW49tZX12uyvNMoG
 
-
-
-
-
 #redis
 spring.cache.type=redis
 spring.redis.host=localhost
@@ -64,3 +60,7 @@ redis.poolConfig.maxIdle=256
 redis.poolConfig.maxWaitMillis=1000
 redis.poolConfig.testOnBorrow=true
 redis.poolConfig.testOnReturn=true
+
+#lock
+redisson.distributed.lock=true
+redisson.lock.module=account:
