修改消息处理及锁

--- a/ex-bb-base/src/main/resources/application-dev.properties
+++ b/ex-bb-base/src/main/resources/application-dev.properties
@@ -25,4 +25,4 @@ base.redis.password=456
 job.type=
 xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
 
-redis.subscriber.test=true
+redis.subscriber.test=false
