--- a/ex-bb-base/src/main/resources/application-dev.properties
+++ b/ex-bb-base/src/main/resources/application-dev.properties
@@ -26,3 +26,6 @@ job.type=
 xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
 
 redis.subscriber.test=false
+
+#tomcat
+server.maxThreads=64
