--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -23,3 +23,6 @@ exp.redis.password=456
 job.type=schedule
 xxl.job.executor.appname=${spring.application.name}-local
 xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
+
+#tomcat
+server.maxThreads=64
