--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 app.server.id=0
 app.server.port=8054
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
+server.maxThreads=100
 
 #eureka
 feign.hystrix.enabled=false
