--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -3,6 +3,7 @@ app.server.port=8054
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
 server.maxThreads=100
 
+
 #eureka
 feign.hystrix.enabled=false
 
@@ -15,6 +16,7 @@ hp.rocketmq.instanceName=${app.server.id}
 hp.rocketmq.default_consumer.group=ex-bb-base
 hp.rocketmq.default_producer.group=ex-bb-base
 mq.orderly.consumer.enable=true
+mq.consume.maxThreads=${server.maxThreads}
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
